--- a/x-clone/src/app/(afterLogin)/layout.module.css
+++ b/x-clone/src/app/(afterLogin)/layout.module.css
@@ -17,7 +17,6 @@
 }
 
 .leftSectionFixed {
-    background-color: orange;
     position: fixed;
     width: inherit;
     height: 100dvb;
@@ -43,7 +42,6 @@
 }
 
 .rightSectionInner {
-    background-color: aqua;
     height: 100%;
     width: 990px;
     display: flex;
@@ -52,13 +50,11 @@
 
 
 .main {
-    background-color: wheat;
     width: 600px;
     height: 200dvh;
 }
 
 .rightSection {
-    background-color: blue;
     width: 350px;
     height: 100%;
 }
@@ -84,8 +80,10 @@
     outline: none;
     background-color: inherit;
     border: none;
+    width: inherit;
     padding: 12px;
     margin-left: 5px;
+    margin-right: 12px;
     font-size: 15px;
 }
 
@@ -125,4 +123,17 @@
 
 .postButton:hover {
     background-color: rgb(24, 140, 216);
+}
+
+.followRecommend {
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(247, 249, 249);
+    border-radius: 16px;
+    margin: 12px 0;
+    padding: 12px 16px;
+}
+
+.followRecommend h3 {
+    padding-bottom: 12px;
 }
