--- a/x-clone/src/app/globals.css
+++ b/x-clone/src/app/globals.css
@@ -88,6 +88,7 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-end-rgb));
+  background-color: white;
 }
 
 a {
