--- a/x-clone/src/app/(afterLogin)/layout.module.css
+++ b/x-clone/src/app/(afterLogin)/layout.module.css
@@ -1,90 +1,45 @@
-.container  {
-  display: flex;
-  align-items: stretch;
+.container {
+    display: flex;
+    align-items: stretch;
+    background-color: #fff;
 }
 
 .leftSectionWrapper {
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
-  flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .leftSection {
-    width : 275px;
-    padding: 0 8px;
+    width: 72px;
     height: 100dvh;
 }
-
 .leftSectionFixed {
     position: fixed;
     width: inherit;
-    height: 100dvb;
+    padding: 0 8px;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
-}
-
-.leftSectionFixed nav {
-    flex: 1
-}
-
-.leftSectionFixed nav li {
-    list-style-type: none;
-}
-
-
-.rightSectionWrapper {
-  display: flex;
-  align-items: flex-start;
-  height: 100dvh;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.rightSectionInner {
-    height: 100%;
-    width: 990px;
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.main {
-    width: 600px;
-    height: 200dvh;
-}
-
-.rightSection {
-    width: 350px;
-    height: 100%;
-}
-
-.search {
-    position: fixed;
-    height: 42px;
-    width: inherit;
-    border-radius: 21px;
-    background-color: rgb(239, 243, 244);
-    margin-top: 6px;
-    margin-bottom: 12px;
-    display: flex;
     align-items: center;
 }
 
-.search svg {
-    margin-left: 20px;
-    fill: rgb(83, 100, 113);
+@media all and (min-width: 1300px) {
+    .leftSection {
+        width: 275px;
+    }
+    .leftSectionFixed {
+        align-items: flex-start;
+    }
+
 }
 
-.search input {
-    outline: none;
-    background-color: inherit;
-    border: none;
-    width: inherit;
-    padding: 12px;
-    margin-left: 5px;
-    margin-right: 12px;
-    font-size: 15px;
+.leftSectionFixed nav {
+    flex: 1;
+}
+.leftSectionFixed nav li {
+    list-style-type: none;
 }
 
 .logo {
@@ -110,19 +65,72 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 52px;
-    box-shadow: rgba(0,0,0,0.08) 0px, 8px, 28px;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 8px 28px;
     background-color: rgb(29, 155, 240);
-    width: 234px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
     border: none;
     color: rgb(255, 255, 255);
     font-weight: 700;
     font-size: 17px;
-    border-radius: 26px;
+}
+.postButton:hover {
+    background-color: rgb(26, 140, 216);
+}
+.postButton span {
+    display: none;
+}
+.postButton svg {
+    display: inline-block;
+    fill: white;
+    width: 24px;
 }
 
-.postButton:hover {
-    background-color: rgb(24, 140, 216);
+@media all and (min-width: 1300px) {
+    .postButton {
+        height: 52px;
+        width: 234px;
+        border-radius: 26px;
+    }
+    .postButton span {
+        display: inline-block;
+    }
+    .postButton svg {
+        display: none;
+    }
+}
+
+.rightSectionWrapper {
+    display: flex;
+    align-items: flex-start;
+    height: 100dvh;
+    flex-direction: column;
+    flex-grow: 1;
+}
+.rightSection {
+    display: none;
+}
+.rightSectionInner {
+    height: 100%;
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+}
+@media all and (min-width: 1024px) {
+    .rightSection {
+        display: inline-block;
+        width: 350px;
+        height: 100%;
+    }
+    .rightSectionInner {
+        width: 990px;
+    }
+}
+
+.main {
+    width: 600px;
+    height: 200dvh;
 }
 
 .followRecommend {
@@ -133,7 +141,6 @@
     margin: 12px 0;
     padding: 12px 16px;
 }
-
 .followRecommend h3 {
     padding-bottom: 12px;
 }
